# cpp-hst

./: .clang-format  .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac
.travis/: test.sh
include/: hst.h
src/hst/: csp0.cc  csp0.h  environment.cc  environment.h  event.cc  event.h  external-choice.cc  external-choice.h  hash.h  interleave.cc  internal-choice.cc  internal-choice.h  normalize.cc  operators.h  prefix.cc  prefix.h  prenormalize.cc  process.cc  process.h  recursion.cc  recursion.h  refinement.cc  refinement.h  semantic-models.cc  semantic-models.h  sequential-composition.cc  sequential-composition.h  stop.cc  stop.h
src/hst/hst/: command.h  hst.cc  reachable.cc  traces.cc
src/libhst/: event.cc  lts.cc
src/libhst/operators/: external-choice.cc  prefix.cc
tests/: test-cases.cc  test-cases.h  test-csp0.cc  test-events.cc  test-harness.cc  test-harness.cc.in  test-lts.cc  test-operators.cc  test-refinement.cc  test-results.cc
